// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates Utils should copy files locally 1`] = `
Array [
  ".npmrc",
  ".pipeline",
  "Jenkinsfile",
  "credentials.json",
  "deployment",
  "manifest.yml",
  "s4hana_pipeline",
  "systems.json",
]
`;

exports[`Templates Utils should return information which files to copy where 1`] = `
Array [
  ".npmrc",
  ".pipeline/config.yml",
  "Jenkinsfile",
  "credentials.json",
  "deployment/.gitkeep",
  "manifest.yml",
  "s4hana_pipeline/reports/backend-integration/.gitkeep",
  "s4hana_pipeline/reports/backend-unit/.gitkeep",
  "s4hana_pipeline/reports/coverage-reports/backend-integration/.gitkeep",
  "s4hana_pipeline/reports/coverage-reports/backend-unit/.gitkeep",
  "systems.json",
]
`;

exports[`Templates Utils should return information which files to copy where 2`] = `
Array [
  "approuter/.npmrc",
  "approuter/manifest.yml",
  "approuter/package.json",
  "approuter/xs-app.json",
  "approuter/xs-security.json",
]
`;
